<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    android:paddingTop="2dp"
    tools:context=".View.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivGallery"
            android:layout_width="match_parent"
            android:layout_height="265dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Caption: "
            android:text="Caption: "
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/ivGallery">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvTimestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date: "
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/tvCaption" />

        <LinearLayout
            android:id="@+id/coordinatesWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTimestamp">

            <TextView
                android:id="@+id/latTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Latitude will be here! " />


            <TextView
                android:id="@+id/lonTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Longitude will be here! "
  />
        </LinearLayout>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location: "
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/lonTextView" />

        <LinearLayout
            android:id="@+id/circleButtonWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTimestamp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnPrev"
                android:onClick="scrollPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                app:srcCompat="@drawable/abc_vector_test"
                android:layout_marginLeft="15dp" android:layout_marginRight="15dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/snap"
                android:onClick="dispatchTakePictureIntent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                app:srcCompat="@android:drawable/ic_menu_camera"
                android:layout_marginLeft="15dp" android:layout_marginRight="15dp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnNext"
                android:onClick="scrollPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                app:srcCompat="@drawable/abc_vector_test"
                android:layout_marginLeft="15dp" android:layout_marginRight="15dp"
                android:scaleX="-1"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="searchPhoto"
            android:text="search"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/circleButtonWrapper"/>

        <Button
            android:id="@+id/btnShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="sharePhoto"
            android:text="Share" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>