<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".View.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton2"
            android:layout_width="wrap_content"
            android:layout_height="87dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:onClick="cancel"
            app:srcCompat="@drawable/abc_vector_test" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="13pt"
            android:text="Search Image" />
    </LinearLayout>

    <!-- Inputs and Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvFromDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="From: "
            android:text="From: ">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFromDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvToDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="To: "
            android:text="To: "
            app:layout_constraintTop_toBottomOf="@+id/tvFromDateTime"
            tools:layout_editor_absoluteX="-16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etToDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvKeywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="Keywords"
            android:text="Keywords: "
            app:layout_constraintTop_toBottomOf="@+id/tvToDateTime">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etKeywords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/go"  android:onClick="go" android:text="Go"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvKeywords"/>

        <Button
            android:id="@+id/btnCancel" android:text="Cancel" android:onClick="cancel"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/go"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>





